2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_selected_cell):
	Removed top & bottom borders.

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_button):
	Changed look of default, get rid of the ugly rectangle.
	Maybe I should add a little shadow.

	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_shadow):
	Changed border for scrolled_window

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_slider):
	This one compiles :)

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_button), (clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider):
	Use some constants

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_scale_trough), (clearlooks_draw_slider),
	(clearlooks_draw_progressbar_fill):
	Better scale trough.

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_spinbutton), (clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider):
	Old looking scrollbar sliders & steppers.

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_list_view_header):
	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_shadow):
	Old looking scrolled window.

2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_scale_trough),
	(clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill):
	First implementation of the old scrollbar, 
	it is breaking Inverted and maybe Glossy (maybe Gummy? :) )

2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>
